All methods with token security and Documentation on Swagger
